# test-6

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
configs/: domains.yaml
data/: openalex_entities.tsv
docs/superpowers/plans/: 2026-03-21-collision-machine.md  2026-03-21-tecs-h-implementation.md
docs/superpowers/specs/: 2026-03-21-tecs-h-design.md
results/2026-03-21/: hyp_20260321_04e1ef.json  hyp_20260321_243eab.json  hyp_20260321_3cc629.json  hyp_20260321_432336.json  hyp_20260321_43838d.json  hyp_20260321_4bb60c.json  hyp_20260321_5010ca.json  hyp_20260321_5f2a74.json  hyp_20260321_799d45.json  hyp_20260321_872e6f.json  hyp_20260321_a178e7.json  hyp_20260321_a834c7.json  hyp_20260321_e9cad5.json  hyp_20260321_fd921a.json
scripts/: verify_hypothesis.py
tecs_h/: __init__.py  cli.py
tecs_h.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tecs_h/claude_io/: client.py  llm.py  router.py
tecs_h/collision/: clash.py  predictor.py  resolver.py
tecs_h/evaluator/: non_topo_baseline.py  pipeline.py  random_baseline.py  scale_test.py
tecs_h/graph/: builder.py  openalex.py
tecs_h/loop/: auto.py  batch.py
tecs_h/novelty/: filter.py
tecs_h/output/: formatter.py
tecs_h/verify/: cross_check.py
tests/: conftest.py  test_claude_io.py  test_collision.py  test_e2e.py  test_evaluator.py  test_formatter.py  test_graph.py  test_loop.py  test_novelty.py  test_verify.py
