[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tecs-h"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "requests>=2.31",
    "pyyaml>=6.0",
    "networkx>=3.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-mock>=3.0"]

[project.scripts]
tecs-h = "tecs_h.cli:main"

[tool.setuptools.packages.find]
include = ["tecs_h*"]
